@@ -1,5 +1,8 @@
 0.20.27	UNRELEASED
 
+ * Allow adding files to repository in pre-commit hook.
+   (Jelmer Vernooĳ, #916)
+
 0.20.26	2021-10-29
 
  * Support os.PathLike arguments to Repo.stage().
